# FocusField

./: .gitignore  BackgroundSyncService  LICENSE  README.md  pyproject.toml
bench_scenes/: README.md  cafe_noise.yaml  competing_talkers.yaml  interruption_dual_speaker.yaml  moving_talker.yaml  near_far_talker.yaml  off_angle_reacquire.yaml  quiet_office.yaml  tv_noise.yaml
configs/: appliance_fastboot.yaml  audio_calibration.json  bench.yaml  device_profiles.yaml  full_3cam_6mic.yaml  full_3cam_6mic_pi.yaml  full_3cam_8mic.yaml  full_3cam_8mic_pi.yaml  full_3cam_8mic_pi_debug.yaml  full_3cam_8mic_pi_demo_live.yaml  full_3cam_8mic_pi_demo_measured.yaml  full_3cam_8mic_pi_demo_observe.yaml  full_3cam_8mic_pi_hq_aggressive.yaml  full_3cam_8mic_pi_hq_balanced.yaml  full_3cam_8mic_pi_prod.yaml  lab_debug.yaml  mac_loopback_dev.yaml  meeting_peripheral.yaml  meeting_peripheral_demo_safe.yaml  meeting_peripheral_demo_ui.yaml  meeting_peripheral_rtp.yaml  mvp_1cam_4mic.yaml  thresholds_presets.yaml
contracts/: invariants.md  messages.md  topics.md
docs/: 01_architecture.md  11_contract_index.md  20_bom_shopping_links.md  30_pi_runbook.md  NASIR_CROWNIE_RESULTS_TESTING.md  final_demo_checklist.md  rtp_loopback_mac.md  virtual_mic_mac.md
scripts/: __init__.py  agent_audit.py  boot_validation.py  calibrate_uma8.py  calibration_workflow.py  check_usb_demo_feasibility.py  demo_ab_capture.py  demo_benchmark_pipeline.py  demo_measured_session.py  demo_panel_report.py  demo_rehearsal_gate.py  focusbench_ab.py  focusfield_boot.sh  install_systemd_service.sh  list_cameras.py  meeting_host_gate.py  pi_demo_launch.sh  pi_perf_gate.py  pi_preflight.py  pi_setup.sh  pi_smoke.py  prepare_pi_local_config.py  prod_release_gate.py  provision_focusfield.py  recover_focusfield.py  setup_usb_gadget_mic.sh  support_bundle.py  watch_pi_telemetry.py
tests/: test_artifacts_and_tracing.py  test_audio_algorithms.py  test_audio_capture_reconnect.py  test_audio_vad.py  (+25 more)
(+119 files in other folders)
