[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focusfield"
description = "Portable acoustic lens pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "FocusField" }
]
dynamic = ["version"]
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.23",
  "opencv-python>=4.8",
  "sounddevice>=0.4.6",
  "webrtcvad>=2.0.10",
  "mediapipe>=0.10.14",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "focusfield.version.__version__" }
